--- a/app/src/resources/scss/app.scss
+++ b/app/src/resources/scss/app.scss
@@ -59,16 +59,8 @@ body{
     background-color: #fff;
   }
 }
-.message__row1 {
-  display: flex;
-  align-items: flex-end;
-  p {
-    margin-top: 0;
-  }
-  
-}
-.message__row2{
-  max-width: 50%;
+.message__row1{
+  max-width: 60%;
   width: fit-content;
   position: relative;
   .message__content{
@@ -78,7 +70,7 @@ body{
     min-width: 40px;
     display: flex;
     justify-content: center;
-    background-color: #0084ff;
+    background-color: #b5b0b0;
     color: #fff;
     border-radius: 18px;
     overflow-wrap: break-word;
@@ -91,9 +83,17 @@ body{
     white-space: nowrap;
     display: none;
   }
+  .message__date.message__date2{
+    top: 36px;
+    right: 5px;
+  }
 }
-.message__row2:hover > .message__date{
+.message__row1:hover > .message__date{
   display: block;
+}
+.message__row1.message__row2{
+  float: right;
+  clear: both;
 }
 .avatar-friend-item{
   height: 49.4px;
@@ -157,6 +157,7 @@ body{
       outline: none;
     }
     .modal-myprofile{
+      z-index: 1000;
       width: 100vw;
       height: 100vh;
       display: none;
@@ -166,6 +167,7 @@ body{
       align-items: center;
       background-color: rgba(0,0,0,0.4);
       .my-profile{
+        display: block;
         width: 400px;
         height: 500px;
         border-radius: 50px;
@@ -209,6 +211,7 @@ body{
         outline: none;
       }
       .modal-add-friend{
+        z-index: 1000;
         width: 100vw;
         height: 100vh;
         position: absolute;
@@ -302,14 +305,34 @@ body{
     width: 100%;
     overflow: auto;
     flex: 1; 
+    display: block;
     padding: 0 20px;
     border-top: 1px solid #b5b0b0;
     border-bottom: 1px solid #b5b0b0;
 
     background:  #dcdcdc;
+    .message-item{
+      display: table;
+      width: 100%;
+      .block-message-content{
+        display: flex;
+        .avatar-friend-inbox{
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          margin-right: 5px;
+          margin-top: 2px;
+        }
+      }
+    }
+    .message__content.message__content2{
+      float: right;
+      clear: both;
+      background-color: #0084ff;
+    }
   }
   .full-message-block{
-    width: 56vw;
+    width: 76vw;
     
     .username-inbox{
       background-color: #fff;
@@ -367,13 +390,14 @@ body{
       }
     }
   }
-  .full-message-block.extend{
-    width: 76vw;
+  .full-message-block.narrow{
+    width: 56vw;
   }
   .block-profile{
     width: 20vw;
     background-color: #fff;
     border-left: 1px solid #b5b0b0;
+    display: none;
     .header-profile{
       height: 72.8px;
       border-bottom: solid 1px #b5b0b0;
@@ -416,8 +440,8 @@ body{
       }
     }
   }
-  .block-profile.close{
-    display: none;
+  .block-profile.open{
+    display: block;
   }
   
 }
@@ -443,10 +467,13 @@ body{
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   background-color: #fff;
 }
-
+.label-form-create{
+  margin-bottom: 4px;
+}
 .input-info-room{
   padding: 10px 40px;
   width: 100%;
+  margin-bottom: 16px;
   font-size: 20px;
   border: solid 0.1px #b5b0b0;
   border-radius: 10px;
