--- a/app/src/resources/scss/app.scss
+++ b/app/src/resources/scss/app.scss
@@ -99,10 +99,12 @@ body{
   height: 49.4px;
   width: 49.4px;
   margin-bottom: -5px;
-  border-radius: 50%;
-  //background-color: #0084ff;
-  background-image: url("https://1.bp.blogspot.com/-tb6Jty3tGvI/XqGjhwS-9RI/AAAAAAAAikQ/MgRq5Ic_TC00ghFtSjAxleM-fDsmMUatwCLcBGAsYHQ/s1600/Hinh-anh-meo-ngau-nhat%2B%25288%2529.jpg");
-  background-size:  100%;
+  img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    margin-bottom: 33px;
+  }
 }
 #block-chat {
   display: flex;
@@ -172,6 +174,15 @@ body{
         height: 500px;
         border-radius: 50px;
         animation: modalFadeIn ease 0.5s;
+        .profile-avatar{
+          width: 80px;
+          height: 80px;
+          .my-avatar{
+            width: 100%;
+            height: 100%;
+          }
+        }
+        }
       }
     }
     .modal-myprofile.open{
