--- a/app/src/resources/views/chat.hbs
+++ b/app/src/resources/views/chat.hbs
@@ -94,7 +94,7 @@
             <input class="search-friend" type="text" placeholder="Tìm Kiếm">
             <button class="btn-add-form js-btn-add-form"><i class="ti-plus"></i></button>
             <div class="js-modal-add-friend modal-add-friend">
-                <form class="form-add-friend js-form-add-friend" action = "user/addFriend", method = "post">
+                <form class="form-add-friend js-form-add-friend" action = "user/addFriend" method = "post">
                     
                     <input type="text" name="userNameFriend" class="input-username-add" value="" placeholder="Tài khoản">
                     <input type="hidden" name="userName" value="{{userChat.userName}}">
